--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,4 @@
 * {
-  margin: 0;
-  padding: 0;
+  font-family: 'Open Sans';
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-}
-::-webkit-scrollbar {
-  width: 100rem;
-}
-
-::-webkit-scrollbar-track {
-  background: #1e1e24;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #6649b8;
 }
